// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Image controls panel component > renders correctly 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1gtchvp-MuiPaper-root"
    data-testid="image-controls-panel"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiStack-root css-1x7gm5i-MuiStack-root"
    >
      <div
        class="MuiFormGroup-root css-1mac7pt-MuiFormGroup-root"
      >
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-19opgx6-MuiFormControlLabel-root"
        >
          <span
            class="MuiSwitch-root MuiSwitch-sizeMedium css-rehya9-MuiSwitch-root"
          >
            <span
              class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-161ms7l-MuiButtonBase-root-MuiSwitch-switchBase"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
                type="checkbox"
              />
              <span
                class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
              />
            </span>
            <span
              class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-rizt0-MuiTypography-root"
          >
            False Colour
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-19opgx6-MuiFormControlLabel-root"
        >
          <span
            class="MuiSwitch-root MuiSwitch-sizeMedium css-rehya9-MuiSwitch-root"
          >
            <span
              aria-disabled="true"
              class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-disabled Mui-disabled PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-disabled Mui-disabled css-161ms7l-MuiButtonBase-root-MuiSwitch-switchBase"
              tabindex="-1"
            >
              <input
                class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
                disabled=""
                type="checkbox"
              />
              <span
                class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
              />
            </span>
            <span
              class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-rizt0-MuiTypography-root"
          >
            Reverse Colour
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-19opgx6-MuiFormControlLabel-root"
        >
          <span
            class="MuiSwitch-root MuiSwitch-sizeMedium css-rehya9-MuiSwitch-root"
          >
            <span
              class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-161ms7l-MuiButtonBase-root-MuiSwitch-switchBase"
            >
              <input
                class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
                type="checkbox"
              />
              <span
                class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
              />
            </span>
            <span
              class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-rizt0-MuiTypography-root"
          >
            Show extended colourmap options
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-19opgx6-MuiFormControlLabel-root"
        >
          <span
            class="MuiSwitch-root MuiSwitch-sizeMedium css-rehya9-MuiSwitch-root"
          >
            <span
              class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-161ms7l-MuiButtonBase-root-MuiSwitch-switchBase"
            >
              <input
                class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
                type="checkbox"
              />
              <span
                class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
              />
            </span>
            <span
              class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-rizt0-MuiTypography-root"
          >
            Centroid / Cross Hairs
          </span>
        </label>
      </div>
      <div
        class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-19qnlrw-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="false"
          id="colour-map-select-label"
        >
          Colour Map
        </label>
      </div>
      <div
        class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiFormLabel-colorPrimary css-1ap3sx2-MuiFormLabel-root"
          id="range-slider-label"
        >
          Level Range
        </label>
        <span
          class="MuiSlider-root MuiSlider-marked MuiSlider-colorPrimary MuiSlider-sizeMedium css-1e45yg4-MuiSlider-root"
        >
          <span
            class="MuiSlider-rail css-r64h58-MuiSlider-rail"
          />
          <span
            class="MuiSlider-track css-xvk2i-MuiSlider-track"
            style="left: 0%; width: 100%;"
          />
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="0"
            style="left: 0%;"
          />
          <span
            aria-hidden="true"
            class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-swtyag-MuiSlider-markLabel"
            data-index="0"
            style="left: 0%;"
          >
            0
          </span>
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="1"
            style="left: 12.549019607843137%;"
          />
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="2"
            style="left: 25.098039215686274%;"
          />
          <span
            aria-hidden="true"
            class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-swtyag-MuiSlider-markLabel"
            data-index="2"
            style="left: 25.098039215686274%;"
          >
            64
          </span>
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="3"
            style="left: 37.64705882352941%;"
          />
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="4"
            style="left: 50.19607843137255%;"
          />
          <span
            aria-hidden="true"
            class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-swtyag-MuiSlider-markLabel"
            data-index="4"
            style="left: 50.19607843137255%;"
          >
            128
          </span>
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="5"
            style="left: 62.745098039215684%;"
          />
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="6"
            style="left: 75.29411764705883%;"
          />
          <span
            aria-hidden="true"
            class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-swtyag-MuiSlider-markLabel"
            data-index="6"
            style="left: 75.29411764705883%;"
          >
            192
          </span>
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="7"
            style="left: 87.84313725490196%;"
          />
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="8"
            style="left: 100%;"
          />
          <span
            aria-hidden="true"
            class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-swtyag-MuiSlider-markLabel"
            data-index="8"
            style="left: 100%;"
          >
            255
          </span>
          <span
            class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1xcmt9q-MuiSlider-thumb"
            data-index="0"
            style="left: 0%;"
          >
            <input
              aria-labelledby="range-slider-label"
              aria-orientation="horizontal"
              aria-valuemax="255"
              aria-valuemin="0"
              aria-valuenow="0"
              data-index="0"
              max="255"
              min="0"
              step="1"
              style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
              type="range"
              value="0"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-valueLabel css-1asissc-MuiSlider-valueLabel"
            >
              <span
                class="MuiSlider-valueLabelCircle"
              >
                <span
                  class="MuiSlider-valueLabelLabel"
                >
                  0
                </span>
              </span>
            </span>
          </span>
          <span
            class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1xcmt9q-MuiSlider-thumb"
            data-index="1"
            style="left: 100%;"
          >
            <input
              aria-labelledby="range-slider-label"
              aria-orientation="horizontal"
              aria-valuemax="255"
              aria-valuemin="0"
              aria-valuenow="255"
              data-index="1"
              max="255"
              min="0"
              step="1"
              style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
              type="range"
              value="255"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-valueLabel css-1asissc-MuiSlider-valueLabel"
            >
              <span
                class="MuiSlider-valueLabelCircle"
              >
                <span
                  class="MuiSlider-valueLabelLabel"
                >
                  255
                </span>
              </span>
            </span>
          </span>
        </span>
      </div>
      <img
        alt="Colour bar"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Image controls panel component > renders correctly with bit depth 12 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1gtchvp-MuiPaper-root"
    data-testid="image-controls-panel"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiStack-root css-1x7gm5i-MuiStack-root"
    >
      <div
        class="MuiFormGroup-root css-1mac7pt-MuiFormGroup-root"
      >
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-19opgx6-MuiFormControlLabel-root"
        >
          <span
            class="MuiSwitch-root MuiSwitch-sizeMedium css-rehya9-MuiSwitch-root"
          >
            <span
              class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-checked Mui-checked css-161ms7l-MuiButtonBase-root-MuiSwitch-switchBase"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
                type="checkbox"
              />
              <span
                class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
              />
            </span>
            <span
              class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-rizt0-MuiTypography-root"
          >
            False Colour
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-19opgx6-MuiFormControlLabel-root"
        >
          <span
            class="MuiSwitch-root MuiSwitch-sizeMedium css-rehya9-MuiSwitch-root"
          >
            <span
              aria-disabled="true"
              class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-disabled Mui-disabled PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-disabled Mui-disabled css-161ms7l-MuiButtonBase-root-MuiSwitch-switchBase"
              tabindex="-1"
            >
              <input
                class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
                disabled=""
                type="checkbox"
              />
              <span
                class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
              />
            </span>
            <span
              class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-rizt0-MuiTypography-root"
          >
            Reverse Colour
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-19opgx6-MuiFormControlLabel-root"
        >
          <span
            class="MuiSwitch-root MuiSwitch-sizeMedium css-rehya9-MuiSwitch-root"
          >
            <span
              class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-161ms7l-MuiButtonBase-root-MuiSwitch-switchBase"
            >
              <input
                class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
                type="checkbox"
              />
              <span
                class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
              />
            </span>
            <span
              class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-rizt0-MuiTypography-root"
          >
            Show extended colourmap options
          </span>
        </label>
        <label
          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-19opgx6-MuiFormControlLabel-root"
        >
          <span
            class="MuiSwitch-root MuiSwitch-sizeMedium css-rehya9-MuiSwitch-root"
          >
            <span
              class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary css-161ms7l-MuiButtonBase-root-MuiSwitch-switchBase"
            >
              <input
                class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
                type="checkbox"
              />
              <span
                class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
              />
            </span>
            <span
              class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
            />
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-rizt0-MuiTypography-root"
          >
            Centroid / Cross Hairs
          </span>
        </label>
      </div>
      <div
        class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-19qnlrw-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="false"
          id="colour-map-select-label"
        >
          Colour Map
        </label>
      </div>
      <div
        class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiFormLabel-colorPrimary css-1ap3sx2-MuiFormLabel-root"
          id="range-slider-label"
        >
          Level Range
        </label>
        <span
          class="MuiSlider-root MuiSlider-marked MuiSlider-colorPrimary MuiSlider-sizeMedium css-1e45yg4-MuiSlider-root"
        >
          <span
            class="MuiSlider-rail css-r64h58-MuiSlider-rail"
          />
          <span
            class="MuiSlider-track css-xvk2i-MuiSlider-track"
            style="left: 0%; width: 100%;"
          />
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="0"
            style="left: 0%;"
          />
          <span
            aria-hidden="true"
            class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-swtyag-MuiSlider-markLabel"
            data-index="0"
            style="left: 0%;"
          >
            0
          </span>
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="1"
            style="left: 12.503052503052503%;"
          />
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="2"
            style="left: 25.006105006105006%;"
          />
          <span
            aria-hidden="true"
            class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-swtyag-MuiSlider-markLabel"
            data-index="2"
            style="left: 25.006105006105006%;"
          >
            1024
          </span>
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="3"
            style="left: 37.50915750915751%;"
          />
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="4"
            style="left: 50.01221001221001%;"
          />
          <span
            aria-hidden="true"
            class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-swtyag-MuiSlider-markLabel"
            data-index="4"
            style="left: 50.01221001221001%;"
          >
            2048
          </span>
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="5"
            style="left: 62.51526251526251%;"
          />
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="6"
            style="left: 75.01831501831502%;"
          />
          <span
            aria-hidden="true"
            class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-swtyag-MuiSlider-markLabel"
            data-index="6"
            style="left: 75.01831501831502%;"
          >
            3072
          </span>
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="7"
            style="left: 87.52136752136752%;"
          />
          <span
            class="MuiSlider-mark MuiSlider-markActive css-16kozi8-MuiSlider-mark"
            data-index="8"
            style="left: 100%;"
          />
          <span
            aria-hidden="true"
            class="MuiSlider-markLabel MuiSlider-markLabel MuiSlider-markLabelActive css-swtyag-MuiSlider-markLabel"
            data-index="8"
            style="left: 100%;"
          >
            4095
          </span>
          <span
            class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1xcmt9q-MuiSlider-thumb"
            data-index="0"
            style="left: 0%;"
          >
            <input
              aria-labelledby="range-slider-label"
              aria-orientation="horizontal"
              aria-valuemax="4095"
              aria-valuemin="0"
              aria-valuenow="0"
              data-index="0"
              max="4095"
              min="0"
              step="1"
              style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
              type="range"
              value="0"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-valueLabel css-1asissc-MuiSlider-valueLabel"
            >
              <span
                class="MuiSlider-valueLabelCircle"
              >
                <span
                  class="MuiSlider-valueLabelLabel"
                >
                  0
                </span>
              </span>
            </span>
          </span>
          <span
            class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1xcmt9q-MuiSlider-thumb"
            data-index="1"
            style="left: 100%;"
          >
            <input
              aria-labelledby="range-slider-label"
              aria-orientation="horizontal"
              aria-valuemax="4095"
              aria-valuemin="0"
              aria-valuenow="4095"
              data-index="1"
              max="4095"
              min="0"
              step="1"
              style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
              type="range"
              value="4095"
            />
            <span
              aria-hidden="true"
              class="MuiSlider-valueLabel css-1asissc-MuiSlider-valueLabel"
            >
              <span
                class="MuiSlider-valueLabelCircle"
              >
                <span
                  class="MuiSlider-valueLabelLabel"
                >
                  4095
                </span>
              </span>
            </span>
          </span>
        </span>
      </div>
      <img
        alt="Colour bar"
      />
    </div>
  </div>
</DocumentFragment>
`;
